# OpenSTL

./: CMakeLists.txt  LICENSE  README.md
Demo/: CMakeLists.txt  demo.cpp
OpenSTL/: CMakeLists.txt
OpenSTL/Algorithm/: CMakeLists.txt  Core.h  FindIntersections.cpp  FindIntersections.h  oclException.h  oclUtils.cpp  oclUtils.h
OpenSTL/Algorithm/ocl_kernels/: triangles.cl
OpenSTL/Core/: CMakeLists.txt  Core.h
OpenSTL/Data/: Attributes.h  CMakeLists.txt  Data.h  Point.cpp  Point.h  PointNeighbourTriangles.cpp  PointNeighbourTriangles.h  PointNeighbours.cpp  PointNeighbours.h  Stl.cpp  Stl.h  StlReader.cpp  StlReader.h  Triangle.cpp  Triangle.h
OpenSTL/Data/Tests/: CMakeLists.txt  Test_PointNeighbourTriangles.cpp  Test_Stl.cpp  main.cpp
OpenSTL/Math/: CMakeLists.txt  Functions.h  Math.cpp  Vector.h  Vector3d.cpp  Vector3d.h
OpenSTL/Python/: CMakeLists.txt  Python.cpp
mesh/: CMakeLists.txt
mesh/algorithm/: Algorithm.h  CMakeLists.txt  FindIntersections.cpp  FindIntersections.h  oclException.h  oclUtils.cpp  oclUtils.h
mesh/algorithm/ocl_kernels/: triangles.cl
mesh/core/: CMakeLists.txt  Core.h
mesh/data/: AttributeMap.cpp  AttributeMap.h  Attributes.cpp  Attributes.h  CMakeLists.txt  Data.h  Indexer.cpp  Indexer.h  KDTree.h  Point.cpp  Point.h  PointNeighbourTriangles.cpp  PointNeighbourTriangles.h  PointNeighbours.h  Stl.cpp  Stl.h  StlReader.cpp  StlReader.h  Triangle.cpp  Triangle.h  TriangleSurface.cpp  TriangleSurface.h
mesh/data/Tests/: CMakeLists.txt  Test_Attributes.cpp  Test_PointNeighbourTriangles.cpp  Test_Stl.cpp  Test_Triangle.cpp  main.cpp
mesh/data/tests/: Test_Indexer.cpp  Test_KDTree_Point.cpp
mesh/math/: Box.h  CMakeLists.txt  Functions.h  GeometryTraits.h  Vector.h  Vector3d.h
mesh/math/tests/: CMakeLists.txt  Test_Box.cpp  main.cpp
mesh/python/: CMakeLists.txt  Python.cpp
